fix dark mode css

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -1,13 +1,24 @@
 
 /* Dark mode: invert color for svg*/
 @media (prefers-color-scheme: dark) {
+  body:not([data-theme="light"])
   img[src$=".svg"]{
     filter: grayscale(1) invert(1);
   }
+  body:not([data-theme="light"])
   div.mermaid svg path.relation
   {
     stroke:ghostwhite !important;
   }
+}
+body[data-theme="dark"]
+img[src$=".svg"]{
+  filter: grayscale(1) invert(1);
+}
+body[data-theme="dark"]
+div.mermaid svg path.relation
+{
+  stroke:ghostwhite !important;
 }
 
 div.app-container{
